--- a/style.css
+++ b/style.css
@@ -1463,6 +1463,10 @@ figure.wp-block-image.aligncenter.size-full {
     z-index: -1;
   }
 
+  body {
+    font-weight: 600;
+  }
+
   .sp_only {
     display: block;
   }
@@ -1521,7 +1525,7 @@ figure.wp-block-image.aligncenter.size-full {
   }
 
   .sec02-item-02__items li span {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
     line-height: 1.3;
     margin-left: 0.6rem;
